--- a/my-app2/public/index.html
+++ b/my-app2/public/index.html
@@ -5,22 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="../static/SScss/bootstrap.min.css">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="stylesheet" href="../css/animate.css">
-  <link rel="stylesheet" href="../css/style.css">
-    <!-- jQuery -->
-  <script src="../js/jquery.min.js"></script>
-  <!-- Bootstrap -->
-  <script src="../js/bootstrap.min.js"></script>
-  <!-- Placeholder -->
-  <script src="../js/jquery.placeholder.min.js"></script>
-  <!-- Waypoints -->
-  <script src="../js/jquery.waypoints.min.js"></script>
-  <!-- Main JS -->
-  <script src="../js/main.js"></script>
-
-  <script src="../js/modernizr-2.6.2.min.js"></script>
+	
+			<script type="text/javascript" src="./wangEditor.min.js"></script>
     <style type="text/css">
       * {
     margin: 0;
@@ -34,6 +20,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+	
     <div id="root"></div>
   </body>
 </html>
